linstaller (1.52.3-1) emily; urgency=low

  * modules/partdisks: library: fixed going back after a partition
    table is created.
  * modules/partdisks: library: fixed object processing when writing
    to RAM.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 08 Dec 2011 11:39:01 +0100

linstaller (1.52.2.2-2) emily; urgency=low

  * debian/control: do not restrict grub-pc: emily supports only i386 and amd64.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 28 Nov 2011 19:45:59 +0100

linstaller (1.52.2.2-1) emily; urgency=low

  * debian/control: linstaller-modules-base: depend on parted.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 28 Nov 2011 19:12:21 +0100

linstaller (1.52.2.1-1) emily; urgency=low

  * modules/partdisks: always declare choices[num] while printing
    partitions; pull self.changed obj from choices[num] instead of
    hardcoding to disk; do the partition table creation *before*
    committing in the object (and before that, remove the device
    from touched).

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 28 Nov 2011 18:47:09 +0100

linstaller (1.52.2-1) emily; urgency=low

  * core/cli_frontend: new action_list widget
  * modules/: new module, widget_test (the widget factory
    for linstaller! :D)
  * linstaller.py: modules overriding supported via the
    -m and --modules flags.
  * modules/partdisks: creating a new MBR partition table is
    now supported.

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Mon, 28 Nov 2011 18:12:33 +0100

linstaller (1.52.1-1) emily; urgency=low

  * partdisks: library: fixed failed return if no disks are
    available.
  * setup.py and debian/: ship update module; depend on apt.cache
    (python-apt).

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Thu, 03 Nov 2011 21:28:26 +0100

linstaller (1.52.0-1) emily; urgency=low

  * partdisks: use the correct partition in the "delete a system"
               option in the automatic partitioner.